--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ enableRobotsTXT = true
 enableEmoji = true
 theme = "jane"
 
-disableKinds = ["RSS"]
+disableRSS = false
 
 # language support # en / zh-cn / other...
 defaultContentLanguage = "en"
